--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	<!-- jQuery -->
 	<script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+	<script src="https://unpkg.com/vue@3.0.0"></script>
+
 
 
 	<!-- DO NOT CHANGE ANYTHING ABOVE THIS LINE-->
@@ -23,6 +25,9 @@
   <body>
 	<div class="container">
 
+<div id="app">
+
+</div>
 	    <div class="header">
 
 	      <div class="container">
@@ -74,6 +79,7 @@
 	  		</a>
 	      </div>
 	    </div>
+		</div>
 	</div>
 
   	<!-- This load the Vue.js code -->
