--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
   <body>
 	<div class="container">
 
-<div id="app">
+<div id="vue_app">
 
-</div>
+
 	    <div class="header">
 
 	      <div class="container">
-	        <h1 id="app_title">{{ title }}</h1>
+	        <h1 id="app_title">{{ movies[0].title }}</h1>
 	      </div>
 
 	    </div>
@@ -40,7 +40,7 @@
 	    <div class="main">
 
 				<div class="container">
-	        <h1 id="app_title">%title%</h1>
+	        <h1 id="app_title">{{movies[0].title}}</h1>
 	      </div>
 
 	    </div>
@@ -54,17 +54,17 @@
 	            <div class="thumbnail">
 
 						<img class="poster"  />
-						<div class="imageInfo">%posterindex%</div>
+						<div class="imageInfo">{{ movies[0].posterIndex }}</div>
 
-						<p class="title">%title% (%country%)</p>
-						<p class="score"><i class="fa fa-star" aria-hidden="true"></i> %iscore% </p>
-						<p class="runtime">Runtime: %runtime%</p>
-						<p class="released">Released: %released% | Rated: %rating%</p>
-						<p class="websites">Websites: <a>%imdb%</a> | <a>%website%</a></p>
+						<p class="title">{{ movies[0].title }} ({{ movies[0].country  }})</p>
+						<p class="score"><i class="fa fa-star" aria-hidden="true"></i> {{ movies[0].iscore }} </p>
+						<p class="runtime">Runtime: {{movies[0].runtime}}</p>
+						<p class="released">Released: {{movies[0].released}} | Rated: {{movies[0].rating}}</p>
+						<p class="websites">Websites: <a>{{movies[0].imdb}}</a> | <a>{{movies[0].website}}</a></p>
 
 			            <div class="social">
-			              <p class="likes"><i class="fa fa-thumbs-up" aria-hidden="true"></i> %likes%</p>
-			              <p class="dislikes"><i class="fa fa-thumbs-down" aria-hidden="true"></i> %dislikes%</p>
+			              <p class="likes"><i class="fa fa-thumbs-up" aria-hidden="true"></i> {{movies[0].likes}}</p>
+			              <p class="dislikes"><i class="fa fa-thumbs-down" aria-hidden="true"></i> {{movies[0].dislikes}}</p>
 			            </div>
 	            </div>
 	        </div>
@@ -74,11 +74,12 @@
 
 	    <div class="footer">
 	      <div class="container">
-			<a id="github" class="btn btn-lg btn-warning">
-				<i class="fa fa-lg fa-github pull-left" aria-hidden="true"></i>%owner% %github%
+			<a id="github" class="btn btn-lg btn-warning" v-bind:href="github" target="_blank">
+				<i class="fa fa-lg fa-github pull-left" aria-hidden="true"></i>{{owner}}
 	  		</a>
 	      </div>
 	    </div>
+		</div>
 		</div>
 	</div>
 
