--- a/index.html
+++ b/index.html
@@ -31,19 +31,13 @@
 	    <div class="header">
 
 	      <div class="container">
-	        <h1 id="app_title">{{ movies[0].title }}</h1>
+	        <h1 id="app_title">{{ title }}</h1>
 	      </div>
 
 	    </div>
 
 
-	    <div class="main">
 
-				<div class="container">
-	        <h1 id="app_title">{{movies[0].title}}</h1>
-	      </div>
-
-	    </div>
 
 
 	    <div class="main">
@@ -51,10 +45,13 @@
 	      <div class="container">
 
 	        <div class="col-md-6">
-	            <div class="thumbnail">
+	            <div class="thumbnail" v-for="(movie, index)in movies">
 
 						<img class="poster"  />
-						<div class="imageInfo">{{ movies[0].posterIndex }}</div>
+						<div class="imageInfo">{{ movies[0].posterIndex }}
+
+
+
 
 						<p class="title">{{ movies[0].title }} ({{ movies[0].country  }})</p>
 						<p class="score"><i class="fa fa-star" aria-hidden="true"></i> {{ movies[0].iscore }} </p>
