--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
 	      <div class="container">
 
-	        <div class="col-md-6">
-	            <div class="thumbnail" v-for="(movie, index)in movies">
+	        <div class="col-md-6" v-for="(movie, index)in movies">
+	            <div class="thumbnail" >
 
 						<img class="poster"  />
 						<div class="imageInfo">{{ movies[0].posterIndex }}
