--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						<p class="score"><i class="fa fa-star" aria-hidden="true"></i> {{ movies.iscore }} </p>
 						<p class="runtime">Runtime: {{movies.runtime}}</p>
 						<p class="released">Released: {{movies.released}} | Rated: {{movies.rating}}</p>
-						<p class="websites">Websites: <a>{{movies.imdb}}</a> | <a>{{movies.website}}</a></p>
+						<p class="websites" >Websites: <a v-bind:href="movies.imbd">IMBD</a> | <a v-bind:href="websites">Official</a></p>
 
 			            <div class="social">
 			              <p class="likes"><i class="fa fa-thumbs-up" aria-hidden="true"></i> {{movies.likes}}</p>
