--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 	      <div class="container">
 
-	        <div class="col-md-6" v-for="(movie, index) in movies">
+	        <div class="col-md-6" v-for="(movies, index) in movies">
 	            <div class="thumbnail" >
 
 						<img class="poster"  />
