--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 
 	      <div class="container">
 
-	        <div class="col-md-6" v-for="(movies, index) in movies {{ index }} - {{ movies }}">
+	        <div class="col-md-6" v-for="(movies, index) in movies">
+						{{ index }} - {{ movies }}
 	            <div class="thumbnail" >
 
 						<img class="poster"  />
