index array again again

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	            <div class="thumbnail" >
 
 						<img class="poster"  />
-						<div class="imageInfo">{{ movies[0].posterIndex }}
+						<div class="imageInfo">{{ movies[index].poster[0] }}
 
 
 
