--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
 </head>
 
   <body>
-	<div class="container">
+	<div class="container"id="vue_app">
 
-<div id="vue_app">
 
 
 	    <div class="header">
@@ -48,7 +47,7 @@
 	            <div class="thumbnail" >
 
 						<img class="poster"  />
-						<div class="imageInfo">{{ movies[index].posterindex[0] }}
+						<div class="imageInfo">{{ movies[index].posterIndex[0] }}
 
 
 
@@ -77,7 +76,7 @@
 	      </div>
 	    </div>
 		</div>
-		</div>
+
 	</div>
 
   	<!-- This load the Vue.js code -->
