index for poster

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	            <div class="thumbnail" >
 
 						<img class="poster"  />
-						<div class="imageInfo">{{ movies[index].posterIndex[0] }}
+						<div class="imageInfo">{{ movies[index].posterIndex[index] }}
 
 
 
