--- a/index.html
+++ b/index.html
@@ -1,86 +1,75 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>IS219 Gallery (Project 3)</title>
+<title>IS219 Gallery (Project 3)</title>
 
-	<!-- Our CSS File along with Boostrap Styles, and FontAwesome Styles-->
-	<link rel="stylesheet" type='text/css' href="style.css"/>
-	<link rel="stylesheet" type='text/css' href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-	<link rel="stylesheet" type='text/css' href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- Our CSS File along with Boostrap Styles, and FontAwesome Styles-->
+<link rel="stylesheet" type='text/css' href="style.css"/>
+<link rel="stylesheet" type='text/css' href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+<link rel="stylesheet" type='text/css' href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-	<!-- jQuery -->
-	<script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
-	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-	<script src="https://unpkg.com/vue@3.0.0"></script>
-
+<!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 
 
-	<!-- DO NOT CHANGE ANYTHING ABOVE THIS LINE-->
+<!-- DO NOT CHANGE ANYTHING ABOVE THIS LINE-->
 
-	<!-- Javascript Framework (e.g., vue.js) (ADD HERE) -->
-
+<!-- Javascript Framework (e.g., vue.js) (ADD HERE) -->
+<script src="https://unpkg.com/vue@3"></script>
 
 </head>
 
   <body>
-	<div class="container"id="vue_app">
+<!-- container holding the vue app -->
+<div id="vue_app" class="container">
+
+   <div class="header">
+
+     <div class="container">
+       <h1 id="app_title">{{ title }}</h1>
+     </div>
+
+   </div>
 
 
+   <div class="main">
 
-	    <div class="header">
+     <div class="container">
 
-	      <div class="container">
-	        <h1 id="app_title">{{ title }}</h1>
-	      </div>
+       <div class="col-md-6" v-for="(movie, index) in movies">
+           <div class="thumbnail">
 
-	    </div>
+<img class="poster"  />
+<div class="imageInfo">{{ movies[index].posterindex[0] }}</div>
 
+<p class="title">{{ movies[index].title }} ({{ movies[index].country }})</p>
+<p class="score"><i class="fa fa-star" aria-hidden="true"></i> {{ movies[index].iscore }} </p>
+<p class="runtime">Runtime: {{ movies[index].runtime }}</p>
+<p class="released">Released: {{ movies[index].released }} | Rated: {{ movies[index].rating }}</p>
+<p class="websites">Websites: <a v-bind:href="movies[index].imdb">IMDB</a> | <a v-bind:href="movies[index].website">Official</a></p>
 
+           <div class="social">
+             <p class="likes"><i class="fa fa-thumbs-up" aria-hidden="true"></i> {{ movies[index].likes }}</p>
+             <p class="dislikes"><i class="fa fa-thumbs-down" aria-hidden="true"></i> {{ movies[index].dislikes }}</p>
+           </div>
+           </div>
+       </div>
 
+     </div>
+   </div>
 
+   <div class="footer">
+     <div class="container">
+<a id="github" class="btn btn-lg btn-warning" v-bind:href="github" target="_blank">
+<i class="fa fa-lg fa-github pull-left" aria-hidden="true"></i>{{ owner }}
+  </a>
+     </div>
+   </div>
+</div>
 
-	    <div class="main">
-
-	      <div class="container">
-
-	        <div class="col-md-6" v-for="(movie, index) in movies">
-	            <div class="thumbnail" >
-
-						<img class="poster"  />
-						<div class="imageInfo">{{ movies[index].posterIndex[index] }}
-
-
-
-
-						<p class="title">{{ movies [index].title }} ({{ movies [index].country  }})</p>
-						<p class="score"><i class="fa fa-star" aria-hidden="true"></i> {{ movies [index].iscore }} </p>
-						<p class="runtime">Runtime: {{movies [index].runtime}}</p>
-						<p class="released">Released: {{movies [index].released}} | Rated: {{movies [index].rating}}</p>
-						<p class="websites" >Websites: <a v-bind:href="movies.imbd">IMBD</a> | <a v-bind:href="websites">Official</a></p>
-
-			            <div class="social">
-			              <p class="likes"><i class="fa fa-thumbs-up" aria-hidden="true"></i> {{movies [index].likes}}</p>
-			              <p class="dislikes"><i class="fa fa-thumbs-down" aria-hidden="true"></i> {{movies [index].dislikes}}</p>
-			            </div>
-	            </div>
-	        </div>
-
-	      </div>
-	    </div>
-
-	    <div class="footer">
-	      <div class="container">
-			<a id="github" class="btn btn-lg btn-warning" v-bind:href="github" target="_blank">
-				<i class="fa fa-lg fa-github pull-left" aria-hidden="true"></i>{{owner}}
-	  		</a>
-	      </div>
-	    </div>
-		</div>
-
-	</div>
-
-  	<!-- This load the Vue.js code -->
-	<script type="text/javascript" src="site.js"></script>
+  <!-- This load the Vue.js code -->
+<script type="text/javascript" src="site.js"></script>
 
 
 </body>
