--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
        <div class="col-md-6" v-for="(movie, index) in movies">
            <div class="thumbnail">
 
-<img class="poster" :src="movies[index].posters[0]" v-on:click="movies[index].posterClick" />
+<img class="poster" :src="movies[index].posters[0]" v-on:click="movies[index].posterClick" @click="handleEvent" />
 <div class="imageInfo">{{ movies[index].posterindex[0] }}</div>
 
 <p class="title">{{ movies[index].title }} ({{ movies[index].country }})</p>
