--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
        <div class="col-md-6" v-for="(movie, index) in movies">
            <div class="thumbnail">
 
-<img class="poster" :src="movies[index].posters[0]" v-on:click="movies[index].posterClick" @click="handleEvent" />
-<div class="imageInfo">{{ movies[index].posterindex[0] }}</div>
+<img class="poster" :src="movies[index].posters[movie.posterindex]" v-on:click="posterClick(index)" />
+<div class="imageInfo">{{ movies[index].posterindex }}</div>
 
 <p class="title">{{ movies[index].title }} ({{ movies[index].country }})</p>
 <p class="score"><i class="fa fa-star" aria-hidden="true"></i> {{ movies[index].iscore }} </p>
