--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
            <div class="thumbnail">
 
 <img class="poster" :src="movies[index].posters[movie.posterindex]" v-on:click="posterClick(index)" />
-<div class="imageInfo">{{ movies[index].posterindex }} | {{movies[index].posters.length}}</div>
+<div class="imageInfo">Poster{{ movies[index].posterindex }} | of {{movies[index].posters.length}}</div>
 
 <p class="title">{{ movies[index].title }} ({{ movies[index].country }})</p>
 <p class="score"><i class="fa fa-star" aria-hidden="true"></i> {{ movies[index].iscore }} </p>
